--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.13.1",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.10",
+    "formik": "^2.4.6",
     "generate-react-cli": "^9.1.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^3.4.18"
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^3.4.18",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
