--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^3.4.18",
     "yup": "^1.7.1"
   },
